<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3787 "
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="419dp"
            android:layout_height="236dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tanker"
            tools:srcCompat="@drawable/tanker" />

        <EditText
            android:id="@+id/code"
            android:layout_width="364dp"
            android:layout_height="42dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="#ffffff"
            android:ems="10"
            android:hint="@string/otp"
            android:inputType="number|textPersonName"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getcode" />

        <Button
            android:id="@+id/getcode"
            android:layout_width="93dp"
            android:layout_height="38dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/style"
            android:onClick="@string/get"
            android:text="Get Code"
            android:textColor="#2c3787 "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Mob" />

        <Button
            android:id="@+id/submit"
            android:layout_width="83dp"
            android:layout_height="41dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/style"
            android:text="Login"
            android:textColor="#2c3787 "
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code"
            tools:text="@string/login" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="357dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/fname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/lname"
            android:layout_width="357dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="104dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/lname"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.785"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/Mob"
            android:layout_width="357dp"
            android:layout_height="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFFFFF"
            android:ems="10"
            android:hint="@string/mob"
            android:inputType="textPersonName|phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
